<resources>
    <string name="app_name">MyPokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_image">Imagem do Pokemon</string>
    <string name="internet_problems">Sem conexão com a Internet</string>
    <string name="try_again">Tentar Novamente</string>
    <string name="vh_background">Background</string>
    <string name="image_not_found">Image Not Found</string>
    <string name="search_pokemon">Pokémon ou Número</string>
    <string name="pokeball_icon">Pokeball</string>
    <string name="pokemon_details_error">Erro ao carregar Pokémon</string>
    <string name="arrow_left">Voltar para o Pokémon anterior</string>
    <string name="arrow_right">Avançar para o próximo Pokémon</string>
    <string name="image_indicator">Indicação de qual imagem está sendo mostrada</string>

    <!--    menus-->
    <string name="menu_search_icon">Search</string>
    <string name="menu_elementos_icon">Elementos</string>
    <string name="menu_todos_icon">Todos</string>
    <string name="menu_aco_icon">Aço</string>
    <string name="menu_agua_icon">Água</string>
    <string name="menu_dragao_icon">Dragão</string>
    <string name="menu_eletrico_icon">Elétrico</string>
    <string name="menu_fada_icon">Fada</string>
    <string name="menu_fantasma_icon">Fantasma</string>
    <string name="menu_fogo_icon">Fogo</string>
    <string name="menu_gelo_icon">Gelo</string>
    <string name="menu_inseto_icon">Inseto</string>
    <string name="menu_lutador_icon">Lutador</string>
    <string name="menu_normal_icon">Normal</string>
    <string name="menu_pedra_icon">Pedra</string>
    <string name="menu_planta_icon">Planta</string>
    <string name="menu_psiquico_icon">Psíquico</string>
    <string name="menu_sombrio_icon">Sombrio</string>
    <string name="menu_terrestre_icon">Terrestre</string>
    <string name="menu_venenoso_icon">Venenoso</string>
    <string name="menu_voador_icon">Voador</string>
    <string name="pokemon_shiny">Shiny</string>
    <string name="pokemon_tipo">Tipo do Pokémon</string>
    <string name="tag_altura">Altura:</string>
    <string name="tag_peso">Peso:</string>
    <string name="tag_ataques">Ataques:</string>
    <string name="pokemon_move_level">"%s - lvl %d</string>
    <string name="tag_formas">Formas:</string>
    <string name="tag_linha_evolutiva">Linha Evolutiva:</string>
    <string name="pokemon_default_pokemon">Sprite padrao do Pokemon</string>
    <string name="sprite_shiny_pokemon">Sprite Shiny do Pokemon</string>
</resources>